--- a/still-taiga-89568/src/containers/App.css
+++ b/still-taiga-89568/src/containers/App.css
@@ -21,7 +21,37 @@ hr {
   padding: 0; 
 }
 
-#buttonColor{
-  background-color: #0ccfcf;
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 30%;
+}
+
+#pass-button{
+  background-color: #13ecec;
+  border: 1px solid #0c7e7e;
+  border-radius: 20px;
+  padding: 10px;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 400px;
+  margin-right: 20px;
+  outline: none;
+  cursor: pointer;
+}
+
+
+#announcement-button {
+  border: 1px solid black;
+  background-color: white;
+  font-weight: bold;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  width: 400px;
+  padding: 10px;
+  outline: none;
+  cursor: pointer;
 }
 
