--- a/still-taiga-89568/src/containers/App.css
+++ b/still-taiga-89568/src/containers/App.css
@@ -23,33 +23,28 @@ hr {
 
 .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 20px auto;
     width: 30%;
+}
+
+button {
+  border-radius: 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+
 }
 
 #pass-button {
     background-color: #0ccfcf;
     border: 1px solid #20b5ba;
-    border-radius: 20px;
-    padding: 10px;
+    padding: 10px 20px;
     color: white;
-    font-size: 1.2rem;
-    font-weight: bold;
-    width: 400px;
-    margin-right: 20px;
-    outline: none;
-    cursor: pointer;
 }
 
 #announcement-button {
     border: 1px solid #b5bfc7;
     background-color: white;
-    font-weight: bold;
-    border-radius: 20px;
-    font-size: 1.2rem;
-    width: 400px;
-    padding: 10px;
-    outline: none;
-    cursor: pointer;
 }
