--- a/still-taiga-89568/src/components/Card.css
+++ b/still-taiga-89568/src/components/Card.css
@@ -22,8 +22,8 @@
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    width: 25%;
-    margin: 20px auto;
+    width: 18%;
+    margin: 30px auto;
 }
 
 #circle {
@@ -36,6 +36,7 @@
     background: #577082;
     color: white;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
 .phone-number {
@@ -48,6 +49,8 @@
 
 .filler-info {
     margin-right: 10px;
+    display: flex;
+    align-items: center;
 }
 
 #caret {
