--- a/still-taiga-89568/src/components/Navbar.css
+++ b/still-taiga-89568/src/components/Navbar.css
@@ -28,6 +28,7 @@
 .navbar-links {
     display: flex;
     justify-content: space-between;
+    align-content: center;
 }
 
 .navbar-links a {
@@ -44,8 +45,12 @@
     color: white;
     background-color: rgb(88, 100, 109);
     border-radius: 50%;
-    padding: 5px;
     font-weight: bold;
+    height: 25px;
+    width: 25px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
  /* .caret {
