--- a/still-taiga-89568/src/containers/App.css
+++ b/still-taiga-89568/src/containers/App.css
@@ -23,14 +23,15 @@ hr {
 
 .buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin: 20px auto;
-    width: 30%;
+    width: 40%;
 }
 
 button {
   border-radius: 20px;
-  font-size: 1.2rem;
+  font-family: 'Arial';
+  font-size: 1.3rem;
   font-weight: bold;
   outline: none;
   cursor: pointer;
@@ -42,6 +43,7 @@ button {
     border: 1px solid #20b5ba;
     padding: 10px 20px;
     color: white;
+    margin-right: 30px;
 }
 
 #announcement-button {
