add font files, add box shadow and blur to user card, revert change in font in header

--- a/still-taiga-89568/src/components/Header.css
+++ b/still-taiga-89568/src/components/Header.css
@@ -14,7 +14,6 @@
 } */
 
 
-
 .header-main {
     align-self: center;
     justify-self: center;
@@ -29,6 +28,7 @@
     padding: 10px 300px;
     color: lightslategray;
     font-size: 18px;
+    font-family: 'Avenir';
 }
 
 .header-session {
