--- a/still-taiga-89568/src/components/Card.css
+++ b/still-taiga-89568/src/components/Card.css
@@ -9,8 +9,6 @@
     font-family: 'Avenir';
 }
 
-
-
 #center {
     display: flex;
     justify-content: center;
@@ -82,4 +80,16 @@
     margin-right: 5px;
     outline: none;
     cursor: pointer;
+}
+
+.user-card {
+    /* border: 1px solid black; */
+    display: block;
+    width: 20%;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto;
+    -webkit-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.23);
+    box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.23);
 }
